# streamflow-gateway

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/web-demo/: config-env.d.ts  experimental-decode.html  experimental-demux.html  experimental-runtime.html  index.html  package-lock.json  package.json  playwright.config.ts  site.html  tsconfig.config.json  tsconfig.json  vite.config.ts
apps/web-demo/scripts/: build-jessibuca4-vendor.mjs  jv4-simd-entry.ts  jv4-tsconfig.json  probe-isolation.mjs  test-https-h265-flow.mjs  test-native-hevc-mse.mjs  test-pthreads-flow.mjs
apps/web-demo/src/: App.tsx  api.ts  experimental-decode-demo.tsx  experimental-decode.css  experimental-demux-demo.tsx  experimental-demux.css  experimental-runtime-demo.tsx  experimental-runtime.css  jv4-shims.d.ts  site.css  (+2 more)
crates/gateway/: Cargo.toml
crates/gateway/src/: api.rs  config.rs  errors.rs  fanout.rs  hls_fallback.rs  lib.rs  main.rs  metrics.rs  stream_manager.rs  upstream.rs
crates/gateway/tests/: streams.rs
docs/: api.md  architecture.md  bottleneck-report.md  browser-h265-soft-decoder-blueprint.md  concurrency.md  deployment.md  frontend-h265-playback.md  implementation-plan.md  testing.md
scripts/: build-amd64-local.sh  collect-metrics.sh  deploy-image.sh  functional-smoke.js  load-matrix.js  start-test-source.sh  stop-test-source.sh  ws-load.js
tests/fixtures/: README.md
tests/integration/: README.md
(+31 files in other folders)
