[package]
name = "streamflow-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
